--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<app-first></app-first>
-<app-cart-list></app-cart-list>
+<h1 #appTitle></h1>
+<main>
+    <div class="product-list">
+        <app-product-list></app-product-list>
+    </div>
+    <div class="cart">
+        <app-cart-list></app-cart-list>
+    </div>
+</main>
