--- a/src/app/cart/components/cart-list/cart-list.component.html
+++ b/src/app/cart/components/cart-list/cart-list.component.html
@@ -1,21 +1,31 @@
-<h2>CartListComponent</h2>
-<ng-container *ngIf="products.length else noproducts">
-    <div class="header">
-        <div class="name">Name</div>
-        <div class="description">Description</div>
-        <div class="price">Price</div>
-    </div>
-    <app-product *ngFor="let product of products; let i = index; trackBy: getProductId"
-        [id]="product.id"
-        [number]="i"
-        [name]="product.name"
-        [description]="product.description"
-        [price]="product.price"
-    ></app-product>
-    <div class="footer">
-        <p>Total: {{getSum() | currency}}</p>
-    </div>
-</ng-container>
-<ng-template #noproducts>
-    <h3>Cart is Empty</h3>
-</ng-template>
+<h2>Cart</h2>
+<div class="container">
+
+    <ng-container *ngIf="cartService.getProducts().length else noproducts">
+        <div class="header">
+            <div class="name">Name</div>
+            <div class="price">Price</div>
+            <div class="quantity">Quantity</div>
+        </div>
+
+        <div id={{product.id}} class="row" *ngFor="let product of cartService.getProducts(); let i = index; trackBy: getProductId">
+            <app-cart-item appHighlight
+                [product]=product
+                [number]=i+1
+                (increase)=onIncrease($event)
+                (decrease)=onDecrease($event)
+                (delete)=onDelete($event)
+                class="cart-item"
+            ></app-cart-item>
+        </div>
+
+        <div *ngIf="getSum()" class="footer">
+            <p>Total: {{getQuantity() ? getQuantity() + ' item(s), ': ''}} {{getSum() | currency}}</p>
+        </div>
+    </ng-container>
+
+    <ng-template #noproducts>
+        <h3>Cart is Empty</h3>
+    </ng-template>
+
+</div>
