--- a/src/app/cart/components/cart-list/cart-list.component.scss
+++ b/src/app/cart/components/cart-list/cart-list.component.scss
@@ -5,28 +5,41 @@ h3 {
 
 .header {
     display: flex;
-    justify-content: center;
+    font-weight: bold;
+}
+
+.row {
+    display: flex;
     align-items: center;
-    margin: 5px 0;
-    width: 100%;
+    margin: 10px 0;
+}
 
-    .name,
-    .description {
-        width: 150px;
-    }
+.name {
+    width: 180px;
+}
 
-    .price {
-        width: 70px;
-    }
+.price {
+    width: 70px;
+}
 
-    .action {
-        width: 135px;
-    }
+.quantity {
+    width: 140px;
+    text-align: center;
 }
 
 .footer {
-    width: 400px;
+    width: 100%;
     border-top: 1px solid #000;
     text-align: right;
     margin: 0 auto;
+}
+
+h3 {
+    text-align: center;
+    color: rgb(143, 21, 21)
+}
+
+.cart-item {
+    padding: 10px;
+    border-radius: 5px;
 }
