--- a/src/app/products/components/product-list/product-list.component.html
+++ b/src/app/products/components/product-list/product-list.component.html
@@ -1,6 +1,7 @@
 <h2>Product List</h2>
+<!-- валидный HTML требует значения атрибутов в кавычках -->
 <app-product
-    [products] = products
-    (productClick) = onProductClick($event)
-    [haveAction]=true
+    [products] = "products"
+    (productClick) = "onProductClick($event)"
+    [haveAction]="true"
 ></app-product>
