--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <ng-container *ngIf="products.length else noproducts">
         <div class="header">
-            <div class="name">Name</div>
-            <div class="description">Description</div>
+            <div appFontChange="5" class="name">Name</div>
+            <div appFontChange="-5" class="description">Description</div>
             <div class="category">Category</div>
             <div class="price">Price</div>
             <div *ngIf="haveAction" class="action">Action</div>
