--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-<h1 #appTitle></h1>
-<main>
-    <div class="product-list">
-        <app-product-list></app-product-list>
-    </div>
-    <div class="cart">
-        <app-cart-list></app-cart-list>
-    </div>
-</main>
+<router-outlet></router-outlet>
