--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+
+$custom-typography-config: mat.define-typography-config(
+    $font-family: '"Nunito Sans", sans-serif;',
+);
+@include mat.core($custom-typography-config);
+
+html, body { height: 100%; }
+body { margin: 0; font-family: "Nunito Sans", sans-serif; }
